--- a/src/index.css
+++ b/src/index.css
@@ -4,53 +4,59 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    background:  -webkit-gradient(linear, left bottom, left top, from(#ff65cc), to(#4b2b96));
+    background:  -o-linear-gradient(bottom, #ff65cc, #4b2b96);
     background:  linear-gradient(0deg, #ff65cc, #4b2b96);
     z-index: -1;
-}
-
-.welcome{
+  }
+  
+  .welcome{
+    -ms-grid-column-align: center;
     justify-self: center;
     font-family: "Lexend Deca", serif;
     font-optical-sizing: auto;
     font-weight: 100;
+    font-size: 200%;
     color: #ffffcd;
-}
-
-.Nblend{
+  }
+  
+  .Nblend{
     font-family: "Lexend Deca", serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: bold;
+    background: -o-linear-gradient(210deg,#867aec,#c4f1b2);
     background: linear-gradient(-120deg,#867aec,#c4f1b2);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent
-}
-
-.div{
-    padding-top: 30px;
+  }
+  
+  .div{
+    padding-top: 6%;
+    -ms-grid-column-align: center;
     justify-self: center;
-}
-
-.center{
+  }
+  
+  .center{
+    -ms-grid-column-align: center;
     justify-self: center;
-}
-
-.pfp{
-    width: 100px;
-    height: 100px;
+  }
+  
+  .pfp{
+    width: 110px;
+    height: 110px;
     border-radius: 50%;
     border: solid 3px #ffffcd;
-}
-
-.spacer{
+  }
+  
+  .spacer{
     margin-bottom: 15px;
-}
-
-
-.text-small{
+  }
+  
+  .text-small{
+    -ms-grid-column-align: center;
     justify-self: center;
-    text-decoration: none;
     font-family: "Lexend Deca", serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -58,47 +64,55 @@
     text-decoration: none;
     color: #ffffcd;
     margin-bottom: 28px;
-}
-
-
-.text{
+  }
+  
+  .text{
+    -ms-grid-column-align: center;
     justify-self: center;
-    text-decoration: none;
     font-family: "Lexend Deca", serif;
     font-optical-sizing: auto;
     font-weight: 800;
     font-style: normal;
     text-decoration: none;
     color: #09081a;
-}
-
-.text-bottom{
+  }
+  
+  .text-bottom{
+    -ms-grid-column-align: center;
     justify-self: center;
     position: absolute;
-    bottom: 10px;
+    bottom: 30px;
     left: 0px;
     right: 0px;
-    text-decoration: none;
     font-family: "Lexend Deca", serif;
     font-optical-sizing: auto;
     font-weight: 800;
     font-style: normal;
+    font-size: 120%;
     text-decoration: none;
     color: #09081a;
-}
-
-.button {
+  }
+  
+  .button {
     width: 80%;
+    -ms-grid-column-align: center;
     justify-self: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     background-color: #9e95f4;
     border: 2px solid #09081a;
     border-radius: 8px;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     color: #09081a;
     cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 48px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     line-height: 24px;
     max-width: 800px;
@@ -106,8 +120,11 @@
     position: relative;
     text-align: center;
     text-decoration: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
     -webkit-user-select: none;
+    -ms-touch-action: manipulation;
     touch-action: manipulation;
   }
   
@@ -121,12 +138,20 @@
     width: 100%;
     position: absolute;
     top: -2px;
+    -webkit-transform: translate(8px, 8px);
+    -ms-transform: translate(8px, 8px);
     transform: translate(8px, 8px);
+    -webkit-transition: -webkit-transform .2s ease-out;
+    transition: -webkit-transform .2s ease-out;
+    -o-transition: transform .2s ease-out;
     transition: transform .2s ease-out;
+    transition: transform .2s ease-out, -webkit-transform .2s ease-out;
     z-index: -1;
   }
   
   .button:hover:after {
+    -webkit-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
     transform: translate(0, 0);
   }
   
