--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body{
   display: grid;
+
 }
-.background{
+html{
     left: 0;
     bottom: 0;
     width: 100%;
@@ -40,25 +41,81 @@ body{
     -ms-grid-column-align: center;
     justify-self: center;
     justify-content: center;
-  }
-  
+  }  
+
   .center{
     -ms-grid-column-align: center;
+    align-items: center;
     justify-content: center;
     justify-self: center;
   }
   
   .pfp{
-    width: 110px;
-    height: 110px;
+    width: clamp(80px, 30vw, 150px);
+    height: clamp(80px, 30vw, 150px);
     border-radius: 50%;
     border: solid 3px #ffffcd;
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
   }
+
+  .rot{
+    animation: rotate 1s ease-out forwards;
+    animation-direction: alternate;
+    perspective: 10px;
+    transform-style: preserve-3d;
+    transition: 1s;
+  }
+
+  @keyframes rotate {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
   
   .spacer{
-    margin-bottom: 15px;
+    margin-bottom: clamp(2px, 2%, 32px);
   }
   
+  .now-playing-green{
+    -ms-grid-column-align: center;
+    justify-self: center;
+    justify-content: center;
+    align-items: center;
+    font-family: "Lexend Deca", serif;
+    font-optical-sizing: auto;
+    text-align: center;
+    font-size: clamp(80%, 4vw, 130%);
+    font-weight: 400;
+    font-style: normal;
+    text-decoration: none;
+    color:    #c4f1b2;
+    margin-bottom: 0.01%;
+  }
+
+  .now-playing{
+    -ms-grid-column-align: center;
+    justify-self: center;
+    justify-content: center;
+    align-items: center;
+    font-family: "Lexend Deca", serif;
+    font-optical-sizing: auto;
+    text-align: center;
+    font-size: clamp(80%, 4vw, 130%);
+    font-weight: 400;
+    font-style: normal;
+    text-decoration: none;
+    color: #ffffcd;
+    margin-bottom: 0.01%;
+  }
+
   .text-small{
     -ms-grid-column-align: center;
     justify-self: center;
@@ -66,6 +123,7 @@ body{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    font-size: clamp(90%, 4vw, 150%);
     text-decoration: none;
     color: #ffffcd;
     margin-bottom: 28px;
@@ -77,7 +135,7 @@ body{
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-    font-size: 100%;
+    font-size: clamp(100%, 4vw, 140%);
     text-decoration: none;
     color: #09081a;
   }
@@ -89,6 +147,7 @@ body{
     font-optical-sizing: auto;
     font-weight: normal;
     font-style: normal;
+    font-size: clamp(60%, 4vw, 140%);
     text-decoration: none;
     color: #09081a;
   }
@@ -111,7 +170,8 @@ body{
   }
   
   .button {
-    width: 80%;
+    height: clamp(36px, 4vh, 76px);
+    width: clamp(150px, 80%, 700px);
     -ms-grid-column-align: center;
     justify-self: center;
     -webkit-box-align: center;
@@ -127,12 +187,10 @@ body{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: 48px;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
     line-height: 24px;
-    max-width: 800px;
     padding: 0 25px;
     position: relative;
     text-align: center;
@@ -150,7 +208,7 @@ body{
     border-radius: 8px;
     content: "";
     display: block;
-    height: 48px;
+    height: 100%;
     left: 0;
     width: 100%;
     position: absolute;
