--- a/src/index.css
+++ b/src/index.css
@@ -1,77 +1,101 @@
-body{
-  display: grid;
-
+html,
+body {
+  height: 100%;
+  margin: 0;
 }
-html{
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background:  -webkit-gradient(linear, left bottom, left top, from(#ff65cc), to(#4b2b96));
-    background:  -o-linear-gradient(bottom, #ff65cc, #4b2b96);
-    background:  linear-gradient(0deg, #ff65cc, #4b2b96);
-    z-index: -1;
-  }
-  
-  .welcome{
-    -ms-grid-column-align: center;
-    justify-self: center;
-    font-family: "Lexend Deca", serif;
-    font-optical-sizing: auto;
-    font-weight: 100;
-    font-size: 200%;
-    color: #ffffcd;
-  }
-  
-  .gradient{
-    font-family: "Lexend Deca", serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: bold;
-    background: -o-linear-gradient(210deg,#867aec,#c4f1b2);
-    background: linear-gradient(-120deg,#867aec,#c4f1b2);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent
-  }
-  
-  .pfp-container{
-    padding-top: 6%;
-    -ms-grid-column-align: center;
-    justify-self: center;
-    justify-content: center;
-  }  
 
-  .center{
-    -ms-grid-column-align: center;
-    align-items: center;
-    justify-content: center;
-    justify-self: center;
-  }
-  
-  .pfp{
-    width: clamp(80px, 30vw, 150px);
-    height: clamp(80px, 30vw, 150px);
-    border-radius: 50%;
-    border: solid 3px #ffffcd;
-    user-drag: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-  }
+body {
+  background: -webkit-gradient(linear, left bottom, left top, from(#ff65cc), to(#4b2b96));
+  background: -o-linear-gradient(bottom, #ff65cc, #4b2b96);
+  background: linear-gradient(0deg, #ff65cc, #4b2b96);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 
-  .rot{
-    animation: rotate 1s ease-out forwards;
-    animation-direction: alternate;
-    perspective: 10px;
-    transform-style: preserve-3d;
-    transition: 1s;
-  }
+  display: flex;
+  flex-direction: column;
+}
 
-  @keyframes rotate {
+main {
+  flex: 1;
+}
+
+footer {
+  margin-top: auto;
+  padding-bottom: 30px;
+}
+
+.text-bottom {
+  -ms-grid-column-align: center;
+  margin-inline: auto;
+  width: fit-content;
+  font-family: "Lexend Deca", serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 120%;
+  text-decoration: none;
+  color: #09081a;
+}
+
+.welcome {
+  -ms-grid-column-align: center;
+  justify-self: center;
+  font-family: "Lexend Deca", serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-size: 200%;
+  color: #ffffcd;
+}
+
+.gradient {
+  font-family: "Lexend Deca", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: bold;
+  background: -o-linear-gradient(210deg, #867aec, #c4f1b2);
+  background: linear-gradient(-120deg, #867aec, #c4f1b2);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.pfp-container {
+  padding-top: 6%;
+  -ms-grid-column-align: center;
+  justify-self: center;
+  justify-content: center;
+}
+
+.center {
+  -ms-grid-column-align: center;
+  align-items: center;
+  justify-content: center;
+  justify-self: center;
+}
+
+.pfp {
+  width: clamp(80px, 30vw, 150px);
+  height: clamp(80px, 30vw, 150px);
+  border-radius: 50%;
+  border: solid 3px #ffffcd;
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.rot {
+  animation: rotate 1s ease-out forwards;
+  animation-direction: alternate;
+  perspective: 10px;
+  transform-style: preserve-3d;
+  transition: 1s;
+}
+
+@keyframes rotate {
   0% {
     transform: rotateY(0);
   }
@@ -79,162 +103,152 @@ html{
     transform: rotateY(360deg);
   }
 }
-  
-  .spacer{
-    margin-bottom: clamp(2px, 2%, 32px);
-  }
-  
-  .now-playing-green{
-    -ms-grid-column-align: center;
-    justify-self: center;
-    justify-content: center;
-    align-items: center;
-    font-family: "Lexend Deca", serif;
-    font-optical-sizing: auto;
-    text-align: center;
-    font-size: clamp(80%, 4vw, 130%);
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
-    color:    #c4f1b2;
-    margin-bottom: 0.01%;
-  }
 
-  .now-playing{
-    -ms-grid-column-align: center;
-    justify-self: center;
-    justify-content: center;
-    align-items: center;
-    font-family: "Lexend Deca", serif;
-    font-optical-sizing: auto;
-    text-align: center;
-    font-size: clamp(80%, 4vw, 130%);
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
-    color: #ffffcd;
-    margin-bottom: 0.01%;
-  }
+.spacer {
+  margin-bottom: clamp(2px, 2%, 32px);
+}
 
-  .text-small{
-    -ms-grid-column-align: center;
-    justify-self: center;
-    font-family: "Lexend Deca", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-size: clamp(90%, 4vw, 150%);
-    text-decoration: none;
-    color: #ffffcd;
-    margin-bottom: 28px;
-  }
-  .text-big{
-    -ms-grid-column-align: center;
-    justify-self: center;
-    font-family: "Lexend Deca", serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-    font-size: clamp(100%, 4vw, 140%);
-    text-decoration: none;
-    color: #09081a;
-  }
+.now-playing-green {
+  -ms-grid-column-align: center;
+  justify-self: center;
+  justify-content: center;
+  align-items: center;
+  font-family: "Lexend Deca", serif;
+  font-optical-sizing: auto;
+  text-align: center;
+  font-size: clamp(80%, 4vw, 130%);
+  font-weight: 400;
+  font-style: normal;
+  text-decoration: none;
+  color: #c4f1b2;
+  margin-bottom: 0.01%;
+}
 
-  .text{
-    -ms-grid-column-align: center;
-    justify-self: center;
-    font-family: "Lexend Deca", serif;
-    font-optical-sizing: auto;
-    font-weight: normal;
-    font-style: normal;
-    font-size: clamp(60%, 4vw, 140%);
-    text-decoration: none;
-    color: #09081a;
-  }
-  
-  .text-bottom{
-    -ms-grid-column-align: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin-inline: auto;
-    width: fit-content;
-    bottom: 30px;
-    font-family: "Lexend Deca", serif;
-    font-optical-sizing: auto;
-    font-weight: bold;
-    font-style: normal;
-    font-size: 120%;
-    text-decoration: none;
-    color: #09081a;
-  }
-  
-  .button {
-    height: clamp(36px, 4vh, 76px);
-    width: clamp(150px, 80%, 700px);
-    -ms-grid-column-align: center;
-    justify-self: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    background-color: #9e95f4;
-    border: 2px solid #09081a;
-    border-radius: 8px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    color: #09081a;
-    cursor: pointer;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    line-height: 24px;
-    padding: 0 25px;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-user-select: none;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-  }
-  
-  .button:after {
-    background-color: #09081a;
-    border-radius: 8px;
-    content: "";
-    display: block;
-    height: 100%;
-    left: 0;
-    width: 100%;
-    position: absolute;
-    top: -2px;
-    -webkit-transform: translate(8px, 8px);
-    -ms-transform: translate(8px, 8px);
-    transform: translate(8px, 8px);
-    -webkit-transition: -webkit-transform .2s ease-out;
-    transition: -webkit-transform .2s ease-out;
-    -o-transition: transform .2s ease-out;
-    transition: transform .2s ease-out;
-    transition: transform .2s ease-out, -webkit-transform .2s ease-out;
-    z-index: -1;
-  }
-  
-  .button:hover:after {
-    -webkit-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  
-  .button:active {
-    background-color: #ffdeda;
-    outline: 0;
-  }
-  
-  .button:hover {
-    outline: 0;
-  }
+.now-playing {
+  -ms-grid-column-align: center;
+  justify-self: center;
+  justify-content: center;
+  align-items: center;
+  font-family: "Lexend Deca", serif;
+  font-optical-sizing: auto;
+  text-align: center;
+  font-size: clamp(80%, 4vw, 130%);
+  font-weight: 400;
+  font-style: normal;
+  text-decoration: none;
+  color: #ffffcd;
+  margin-bottom: 0.01%;
+}
+
+.text-small {
+  -ms-grid-column-align: center;
+  justify-self: center;
+  font-family: "Lexend Deca", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: clamp(90%, 4vw, 150%);
+  text-decoration: none;
+  color: #ffffcd;
+  margin-bottom: 28px;
+}
+.text-big {
+  -ms-grid-column-align: center;
+  justify-self: center;
+  font-family: "Lexend Deca", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: clamp(100%, 4vw, 140%);
+  text-decoration: none;
+  color: #09081a;
+}
+
+.text {
+  -ms-grid-column-align: center;
+  justify-self: center;
+  font-family: "Lexend Deca", serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+  font-size: clamp(60%, 4vw, 140%);
+  text-decoration: none;
+  color: #09081a;
+}
+
+.button {
+  height: clamp(36px, 4vh, 76px);
+  width: clamp(150px, 80%, 700px);
+  -ms-grid-column-align: center;
+  justify-self: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #9e95f4;
+  border: 2px solid #09081a;
+  border-radius: 8px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #09081a;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  line-height: 24px;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+}
+
+.button:after {
+  background-color: #09081a;
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 100%;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  -webkit-transform: translate(8px, 8px);
+  -ms-transform: translate(8px, 8px);
+  transform: translate(8px, 8px);
+  -webkit-transition: -webkit-transform 0.2s ease-out;
+  transition: -webkit-transform 0.2s ease-out;
+  -o-transition: transform 0.2s ease-out;
+  transition: transform 0.2s ease-out;
+  transition: transform 0.2s ease-out, -webkit-transform 0.2s ease-out;
+  z-index: -1;
+}
+
+.button:hover:after {
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+
+.button:active {
+  background-color: #ffdeda;
+  outline: 0;
+}
+
+.button:hover {
+  outline: 0;
+}
+
+@media (min-width:320px)  { .desktop { display: none; } }
+@media (min-width:481px)  { .desktop { display: none; }}
+@media (min-width:641px)  { .mobile { display: none; } }
+@media (min-width:961px)  { .mobile { display: none; }}
+@media (min-width:1025px) { .mobile { display: none; } }
+@media (min-width:1281px) { .mobile { display: none; } }
